--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
   background-image: url('../assets/so-white.png');
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 a {
@@ -110,6 +111,10 @@ h5 {
   padding: 2rem;
 }
 
+.doelgroep_h1 {
+  padding: 0px;
+}
+
 .doelgroep_tekst {
   color: whitesmoke;
   text-shadow: 1px 1px 2px rgb(43, 41, 41);
@@ -145,6 +150,11 @@ h5 {
 .contact_container {
   background-color: #279da1;
   padding: 1.1rem;
+}
+
+.contact_quote {
+  font-style: italic;
+  font-weight: lighter;
 }
 
 /* behandelingen */
