--- a/css/style.css
+++ b/css/style.css
@@ -121,13 +121,29 @@ h5 {
   padding: 2rem;
 }
 
+.kinderen_container {
+  background-image: url('/assets/kinderen.jpg');
+}
+.volwassenen_container {
+  background-image: url('/assets/zolen2.jpg');
+  background-size: cover;
+}
 .doelgroep_h1 {
   padding: 0px;
+}
+
+.kinderen_h1 {
+  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.8);
 }
 
 .doelgroep_tekst {
   color: whitesmoke;
   text-shadow: 1px 1px 2px rgb(43, 41, 41);
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-font-smoothing: antialiased !important;
+  text-rendering: optimizelegibility !important;
+  letter-spacing: 0.03em;
 }
 
 .quote {
