--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,12 @@ h5 {
   display: flex;
   flex-direction: row-reverse;
 }
+.behandeling_container {
+  padding: 1em;
+  border: 2px solid #a89b4b;
+  border-radius: 10px;
+  margin: 5px;
+}
 
 /* footer  */
 #footer {
